aws-security-group/main.tf
resource "aws_security_group" "security-group" {
  name        = "${var.cluster}-security-group"
  description = "allows SSH and HTTP"
  vpc_id      = var.vpc-id
  tags        = { Name = "${var.cluster}-security-group" }
  ingress {
    description = "allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "allow HTTP"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    description = "allow all"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
